Attempts at model weirdness refactoring